@@ -137,12 +137,8 @@ class ICMPDecoder(Decoder):
     def decode(self, aBuffer):
         ic = ImpactPacket.ICMP(aBuffer)
         off = ic.get_header_size()
-        if ic.get_icmp_type() == ImpactPacket.ICMP.ICMP_UNREACH:
-            self.ip_decoder = IPDecoder()
-            packet = self.ip_decoder.decode(aBuffer[off:])
-        else:
-            self.data_decoder = DataDecoder()
-            packet = self.data_decoder.decode(aBuffer[off:])
+        self.data_decoder = DataDecoder()
+        packet = self.data_decoder.decode(aBuffer[off:])
         ic.contains(packet)
         return ic
 
